# analise-risco-financeiro

./: .gitignore  README.md  main.py  pipeline_serial.py  pyproject.toml  requirements.txt  run.bat
data/: finanalise.db  light_smoke.db  smoke.db
src/finanalise/: analytics.py  benchmarks.py  cli.py  data.py  database.py  models.py  visualization.py
src/finanalise/ingestion/: __init__.py  bcb.py  kaggle.py
tests/: test_analytics.py  test_bcb_api.py  test_benchmark.py  test_cli.py  test_cli_choices.py  test_database.py  test_kaggle_ingestion.py
