[project]
name = "finanalise"
version = "0.1.0"
description = "MVP backend para analise financeira historica com SQLite, paralelismo e Rich CLI."
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
